# data-engineering-zoomcamp

./: .gitignore  Readme.md
01 - Docker-Postgres/Homework/: Readme.md  homework_module_1.md
01 - Docker-Postgres/Homework/Data/: Dockerfile  docker-compose.yaml  ingest_data.ipynb  ingest_data.py  pyproject.toml  queries.sql
01 - Docker-Postgres/Lesson/pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  pyproject.toml
01 - Docker-Postgres/Lesson/terraform/terraform-demo/: .terraform.lock.hcl  main.tf  variables.tf
1 - Docker + Postgres/pipeline/: Dockerfile  ingest_data.py  pipeline.py  pyproject.toml
