[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.6.2",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.3.4",
    "pyarrow>=25.0.0",
    "sqlalchemy>=2.0.51",
]
